k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogpoint
spec:
  selector:
    matchLabels:
      app: blogpoint
  replicas: 2
  template:
    metadata:
      labels:
        app: blogpoint
    spec:
      containers:
        - name: blogpoint
          image: sparshsethi15/blogpoint-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
