k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogpoint-service
spec:
  type: ClusterIP
  selector:
    app: blogpoint
  ports:
    - port: 80
      targetPort: 8080
