k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogpoint-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - api.blogpoint.sparshsethi.me
      secretName: letsencrypt-secret
  rules:
    - host: api.blogpoint.sparshsethi.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blogpoint-service
                port:
                  number: 80
